--- a/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
+++ b/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
@@ -285,7 +285,7 @@ $ {orch-cli} create namespace {prod-namespace} &&  \
     -n {prod-namespace}
 ----
 
-. Prepare `CheCluster` patch:
+. Prepare the `CheCluster` patch:
 +
 [subs="+attributes"]
 ----
