--- a/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
+++ b/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
@@ -6,7 +6,7 @@
 
 
 [id="installing-{prod-id-short}-on-minikube-keycloak-oidc_{context}"]
-= Installing {prod-short} on Minikube with {identity-provider} as OIDC Identity Provider
+= Installing {prod-short} on Minikube with {identity-provider} as the OIDC provider
 
 This article explains how to create a single-node {kubernetes} cluster with Minikube to deploy {prod-short} and
 configure it to use {identity-provider} as the OIDC identity provider.
