--- a/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
+++ b/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
@@ -305,7 +305,7 @@ spec:
 EOF
 ----
 
-. Create the {prod-short} instance with {prod-cli}:
+. Create the {prod-short} instance with `{prod-cli}`:
 +
 [subs="+attributes"]
 ----
