--- a/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
+++ b/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
@@ -8,8 +8,7 @@
 [id="installing-{prod-id-short}-on-minikube-keycloak-oidc_{context}"]
 = Installing {prod-short} on Minikube with {identity-provider} as the OIDC provider
 
-This article explains how to create a single-node {kubernetes} cluster with Minikube to deploy {prod-short} and
-configure it to use {identity-provider} as the OIDC identity provider.
+You can create a single-node {kubernetes} cluster with Minikube to deploy {prod-short} and configure it to use {identity-provider} as the OpenID Connect (OIDC) provider.
 
 WARNING: Remember that single-node {kubernetes} clusters are suited only for testing or development. Do *NOT* use such clusters to run {prod-short} for organizations or developer teams.
 
