--- a/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
+++ b/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
@@ -341,4 +341,4 @@ $ {prod-cli} server:status
 $ {prod-cli} dashboard:open
 ----
 
-. Login to {prod-short} instance with Username: `test` and Password: `test`
+. Log in to the {prod-short} instance with *Username:* `test` and *Password:* `test`.
