--- a/modules/administration-guide/pages/configuring-network-policies.adoc
+++ b/modules/administration-guide/pages/configuring-network-policies.adoc
@@ -7,7 +7,7 @@
 [id="configuring-networking-policies_{context}"]
 = Configuring network policies
 
-By default all Pods in a {orch-name} cluster can communicate with each other even if they are in different namespaces.
+By default, all Pods in a {orch-name} cluster can communicate with each other even if they are in different namespaces.
 In the context of {prod-short}, this makes it possible for a workspace Pod from one user {orch-namespace} to send traffic to another workspace Pod from a different user {orch-namespace}.
 
 For security, multitenant isolation can be configured by using NetworkPolicy objects to restrict all incoming communication to Pods in a user {orch-namespace}.
