Remove snip, specify user namespace
Signed-off-by: dkwon17 <dakwon@redhat.com>

--- a/modules/administration-guide/pages/configuring-network-policies.adoc
+++ b/modules/administration-guide/pages/configuring-network-policies.adoc
@@ -11,7 +11,7 @@ By default, all Pods in a {orch-name} cluster can communicate with each other ev
 In the context of {prod-short}, this makes it possible for a workspace Pod in one user {orch-namespace} to send traffic to another workspace Pod in a different user {orch-namespace}.
 
 For security, multitenant isolation could be configured by using NetworkPolicy objects to restrict all incoming communication to Pods in a user {orch-namespace}.
-However, Pods in the {prod-short} {orch-namespace} must be able to communicate with Pods in {orch-namespace}s.
+However, Pods in the {prod-short} {orch-namespace} must be able to communicate with Pods in user {orch-namespace}s.
 
 For a {prod-short} installation with network restrictions such as multitenant isolation configured, the `allow-from-eclipse-che.yaml` NetworkPolicy must be applied to each user {orch-namespace}.
 
