--- a/modules/administration-guide/pages/configuring-network-policies.adoc
+++ b/modules/administration-guide/pages/configuring-network-policies.adoc
@@ -36,7 +36,7 @@ spec:
 ----
 ====
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
-<2> The empty podSelector selects all Pods in the {orch-namespace}.
+<2> The empty `podSelector` selects all Pods in the {orch-namespace}.
 
 .Additional resources
 
