--- a/modules/administration-guide/partials/proc_applying-an-application-link-secret-for-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_applying-an-application-link-secret-for-the-bitbucket-server.adoc
@@ -1,19 +1,19 @@
 :_content-type: PROCEDURE
-:description: Applying the Bitbucket application link Secret
-:keywords: bitbucket, bitbucket-application, bitbucket-app, bitbucket-application-link, bitbucket-app-link, bitbucket-secret, secret
-:navtitle: Applying the Bitbucket application link Secret
+:description: Applying an application link Secret for the Bitbucket Server
+:keywords: bitbucket, bitbucket-server, application-link, bitbucket-secret
+:navtitle: Applying an application link Secret for the Bitbucket Server
 // :page-aliases:
 
-[id="applying-the-bitbucket-application-link-secret_{context}"]
-= Applying the Bitbucket application link Secret
+[id="applying-an-application-link-secret-for-the-bitbucket-server_{context}"]
+= Applying an application link Secret for the Bitbucket Server
 
-Prepare and apply the Bitbucket application link Secret.
+Prepare and apply the application link Secret for the Bitbucket Server.
 
 .Prerequisites
 
-* Setting up the Bitbucket application link is completed.
+* The application link is set up on the Bitbucket Server.
 
-* The following Base64-encoded files, which were created when setting up the Bitbucket application link, are prepared:
+* The following Base64-encoded files, which were created when setting up the application link, are prepared:
 ** `privatepkcs8-stripped.pem`
 ** `bitbucket_consumer_key`
 ** `bitbucket-shared-secret`
@@ -44,7 +44,7 @@ data:
   shared_secret: __<Base64_content_of_bitbucket-shared-secret>__ <5>
 ----
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
-<2> The Bitbucket server URL.
+<2> The URL of the Bitbucket Server.
 <3> The Base64-encoded content of the `privatepkcs8-stripped.pem` file.
 <4> The Base64-encoded content of the `bitbucket_consumer_key` file.
 <5> The Base64-encoded content of the `bitbucket-shared-secret` file.
