docs: in installing-che-in-a-restricted-environment, add a last step pointing to configuring-network-policies

--- a/modules/administration-guide/pages/configuring-network-policies.adoc
+++ b/modules/administration-guide/pages/configuring-network-policies.adoc
@@ -13,9 +13,13 @@ In the context of {prod-short}, this makes it possible for a workspace Pod in on
 For security, multitenant isolation could be configured by using NetworkPolicy objects to restrict all incoming communication to Pods in a user {orch-namespace}.
 However, Pods in the {prod-short} {orch-namespace} must be able to communicate with Pods in user {orch-namespace}s.
 
-For a cluster with network restrictions such as multitenant isolation already configured, you must apply the `allow-from-{prod-namespace}` NetworkPolicy to each user {orch-namespace}. The `allow-from-{prod-namespace}` NetworkPolicy allows incoming traffic from the {prod-short} namespace to all Pods in the user {orch-namespace}.
+.Prerequisites
+* The {orch-name} cluster has network restrictions such as multitenant isolation.
 
-
+.Procedure
+* Apply the `allow-from-{prod-namespace}` NetworkPolicy to each user {orch-namespace}.
+The `allow-from-{prod-namespace}` NetworkPolicy allows incoming traffic from the {prod-short} namespace to all Pods in the user {orch-namespace}.
++
 .`allow-from-{prod-namespace}.yaml`
 ====
 [source,yaml,subs="+quotes,attributes"]
@@ -35,11 +39,12 @@ spec:
     - Ingress
 ----
 ====
-<1> The {prod-short} namespace. The default is `{prod-namespace}`.
++
+<1> The {prod-short} namespace.
+The default is `{prod-namespace}`.
 <2> The empty `podSelector` selects all Pods in the {orch-namespace}.
 
 .Additional resources
-
 * xref:configuring-namespace-provisioning.adoc[]
 
 * link:https://kubernetes.io/docs/concepts/security/multi-tenancy/#network-isolation[Network isolation]
