--- a/modules/administration-guide/pages/installing-che-in-a-restricted-environment.adoc
+++ b/modules/administration-guide/pages/installing-che-in-a-restricted-environment.adoc
@@ -29,4 +29,6 @@ $ {prod-cli} server:deploy --platform=openshift \
   --che-operator-cr-patch-yaml=che-operator-cr-patch.yaml
 ----
 
+. Allow incoming traffic from the {prod-short} namespace to all Pods in the user {orch-namespace}s. See: xref:configuring-network-policies.adoc[].
+
 include::partial$snip_installing-che-in-a-restricted-environment-additional-resources.adoc[]
