--- a/modules/administration-guide/partials/proc_setting-up-an-oauth-consumer-in-the-bitbucket-cloud.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-an-oauth-consumer-in-the-bitbucket-cloud.adoc
@@ -26,7 +26,7 @@ Set up an OAuth consumer for OAuth 2.0 in the Bitbucket Cloud.
 
 . Enter `pass:c,a,q[{prod-url}]/api/oauth/callback` as the *Callback URL*.
 
-. Under *Permissions*, check all of the *Account* and *Repositories* checkboxes, and *Save*.
+. Under *Permissions*, check all of the *Account* and *Repositories* checkboxes, and click *Save*.
 
 . Expand the added consumer and then copy the *Key* value and encode it to Base64 for use when applying the Bitbucket OAuth consumer Secret:
 +
