--- a/modules/administration-guide/pages/oauth-for-github-gitlab-or-bitbucket.adoc
+++ b/modules/administration-guide/pages/oauth-for-github-gitlab-or-bitbucket.adoc
@@ -2,7 +2,7 @@
 :description: OAuth for GitHub, GitLab, or Bitbucket
 :keywords: bitbucket
 :navtitle: OAuth for GitHub, GitLab, or Bitbucket
-:page-aliases:
+// :page-aliases:
 
 [id="oauth-for-github-gitlab-or-bitbucket_{context}"]
 = OAuth for GitHub, GitLab, or Bitbucket
@@ -11,4 +11,4 @@ To enable users to work with remote Git repositories:
 
 * xref:configuring-oauth-2-for-github.adoc[]
 * xref:configuring-oauth-2-for-gitlab.adoc[]
-* xref:configuring-oauth-1-for-bitbucket.adoc[]
+* Configuring xref:configuring-oauth-1-for-a-bitbucket-server.adoc[OAuth 1.0 for a Bitbucket Server] or xref:configuring-oauth-2-for-the-bitbucket-cloud.adoc[OAuth 2.0 for the Bitbucket Cloud]
