--- a/modules/administration-guide/partials/proc_applying-the-github-oauth-app-secret.adoc
+++ b/modules/administration-guide/partials/proc_applying-the-github-oauth-app-secret.adoc
@@ -42,7 +42,7 @@ data:
   secret: __<Base64_GitHub_OAuth_Client_Secret>__ <4>
 ----
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
-<2> A *GitHub Enterprise Server URL* (optional). If GitHub Cloud is used, remove the annotation.
+<2> A *GitHub Enterprise Server URL*. By default `https://github.com` is used for the `SAAS` version.
 <3> The Base64-encoded *GitHub OAuth Client ID*.
 <4> The Base64-encoded *GitHub OAuth Client Secret*.
 
