--- a/modules/administration-guide/partials/proc_applying-the-github-oauth-app-secret.adoc
+++ b/modules/administration-guide/partials/proc_applying-the-github-oauth-app-secret.adoc
@@ -35,14 +35,16 @@ metadata:
     app.kubernetes.io/component: oauth-scm-configuration
   annotations:
     che.eclipse.org/oauth-scm-server: github
+    che.eclipse.org/scm-server-endpoint: <github_server_url> <2>
 type: Opaque
 data:
-  id: __<Base64_GitHub_OAuth_Client_ID>__ <2>
-  secret: __<Base64_GitHub_OAuth_Client_Secret>__ <3>
+  id: __<Base64_GitHub_OAuth_Client_ID>__ <3>
+  secret: __<Base64_GitHub_OAuth_Client_Secret>__ <4>
 ----
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
-<2> The Base64-encoded *GitHub OAuth Client ID*.
-<3> The Base64-encoded *GitHub OAuth Client Secret*.
+<2> A *GitHub Enterprise Server URL*. By default `https://github.com` is used for the `SAAS` version.
+<3> The Base64-encoded *GitHub OAuth Client ID*.
+<4> The Base64-encoded *GitHub OAuth Client Secret*.
 
 . Apply the Secret:
 +
