--- a/modules/administration-guide/pages/importing-untrusted-tls-certificates.adoc
+++ b/modules/administration-guide/pages/importing-untrusted-tls-certificates.adoc
@@ -53,10 +53,10 @@ Certificate files are typically stored as Base64 files, with extensions such as 
 +
 [subs="+attributes,+quotes"]
 ----
-$ {orch-cli} create configmap custom-certs --from-file=__<bundle-file-path>__ -n={prod-namespace}
+$ {orch-cli} create configmap custom-certs --from-file=__<bundle_file_path>__ -n={prod-namespace}
 ----
 +
-To apply more than one bundle, add another `-from-file=_<bundle-file-path>_`. Alternatively, create another ConfigMap.
+To apply more than one bundle, add another `-from-file=_<bundle_file_path>_`. Alternatively, create another ConfigMap.
 
 . Label created ConfigMaps with the `app.kubernetes.io/part-of=che.eclipse.org` and `app.kubernetes.io/component=ca-bundle` labels:
 +
@@ -125,7 +125,7 @@ To get the SHA1 hash of a certificate on the local filesystem, run:
 +
 [subs="+attributes,+quotes",options="nowrap",role=white-space-pre]
 ----
-$ openssl x509 -in __<certificate-file-path>__ -fingerprint -noout
+$ openssl x509 -in __<certificate_file_path>__ -fingerprint -noout
 SHA1 Fingerprint=3F:DA:BF:E7:A7:A7:90:62:CA:CF:C7:55:0E:1D:7D:05:16:7D:45:60
 ----
 
