--- a/modules/administration-guide/pages/installing-che-on-red-hat-openshift-local.adoc
+++ b/modules/administration-guide/pages/installing-che-on-red-hat-openshift-local.adoc
@@ -41,7 +41,7 @@ $ crc setup
 +
 [subs="+quotes"]
 ----
-$ crc start --memory 12288 --disk-size=64 --pull-secret-file __<pull-secret-file>__
+$ crc start --memory 12288 --disk-size=64 --pull-secret-file __<pull_secret_file>__
 ----
 
 . Enable access to the `oc` command line interface embedded in {rh-os-local}:
