--- a/modules/administration-guide/pages/repairing-the-devworkspace-operator-on-openshift.adoc
+++ b/modules/administration-guide/pages/repairing-the-devworkspace-operator-on-openshift.adoc
@@ -43,7 +43,7 @@ $ oc delete sub devworkspace-operator \
 ----
 <1> `openshift-operators` or an OpenShift {orch-namespace} where the {devworkspace} Operator is installed.
 
-. Get the {devworkspace} Operator CSVs in the __<devworkspace-operator.vX.Y.Z>__ format:
+. Get the {devworkspace} Operator CSVs in the __<devworkspace_operator.vX.Y.Z>__ format:
 +
 ----
 $ oc get csv | grep devworkspace
@@ -53,7 +53,7 @@ $ oc get csv | grep devworkspace
 +
 [subs="+quotes"]
 ----
-$ oc delete csv __<devworkspace-operator.vX.Y.Z>__ \
+$ oc delete csv __<devworkspace_operator.vX.Y.Z>__ \
 -n openshift-operators <1>
 ----
 <1> `openshift-operators` or an OpenShift {orch-namespace} where the {devworkspace} Operator is installed.
