--- a/modules/administration-guide/pages/using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc
+++ b/modules/administration-guide/pages/using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc
@@ -24,7 +24,7 @@ To deploy {prod-short} with a suitable configuration, edit the `CheCluster` Cust
 ----
 spec:
   __<component>__:
-      __<property-to-configure>__: __<value>__
+      __<property_to_configure>__: __<value>__
 ----
 ====
 * Deploy {prod-short} and apply the changes described in `che-operator-cr-patch.yaml` file:
@@ -33,7 +33,7 @@ spec:
 ----
 $ {prod-cli} server:deploy \
 --che-operator-cr-patch-yaml=che-operator-cr-patch.yaml \
---platform __<chosen-platform>__
+--platform __<chosen_platform>__
 ----
 
 .Verification
@@ -42,7 +42,7 @@ $ {prod-cli} server:deploy \
 +
 [subs="+attributes,quotes"]
 ----
-$ oc get configmap che -o jsonpath='{.data._<configured-property>_}' \
+$ oc get configmap che -o jsonpath='{.data._<configured_property>_}' \
 -n {prod-namespace}
 ----
 
