--- a/modules/administration-guide/pages/using-the-cli-to-configure-the-checluster-custom-resource.adoc
+++ b/modules/administration-guide/pages/using-the-cli-to-configure-the-checluster-custom-resource.adoc
@@ -32,7 +32,7 @@ $ {orch-cli} edit checluster/{prod-checluster} -n {prod-namespace}
 +
 [subs="+attributes,quotes"]
 ----
-$ {orch-cli} get configmap che -o jsonpath='{.data._<configured-property>_}' \
+$ {orch-cli} get configmap che -o jsonpath='{.data._<configured_property>_}' \
 -n {prod-namespace}
 ----
 
