--- a/modules/end-user-guide/pages/troubleshooting-slow-workspaces.adoc
+++ b/modules/end-user-guide/pages/troubleshooting-slow-workspaces.adoc
@@ -56,7 +56,7 @@ CDN configuration::
 +
 The IDE editor uses a CDN (Content Delivery Network) to serve content. Check that the content uses a CDN to the client (or a local route for offline setup).
 +
-To check that, open Developer Tools in the browser and check for `vendors` in the *Network* tab. `vendors.<random-id>.js` or `editor.main.*` should come from CDN URLs.
+To check that, open Developer Tools in the browser and check for `vendors` in the *Network* tab. `vendors.<random_id>.js` or `editor.main.*` should come from CDN URLs.
 
 
 [id="improving-workspace-runtime-performance_{context}"]
