--- a/modules/end-user-guide/partials/proc_verifying-the-state-of-the-netcoredebugoutput-plug-in.adoc
+++ b/modules/end-user-guide/partials/proc_verifying-the-state-of-the-netcoredebugoutput-plug-in.adoc
@@ -14,7 +14,7 @@
 {
  "type": "netcoredbg",
  "request": "launch",
- "program": "$\{workspaceFolder}/bin/Debug/__<target-framework>__/__<project-name.dll>__",
+ "program": "$\{workspaceFolder}/bin/Debug/__<target_framework>__/__<project_name.dll>__",
  "args": [],
  "name": ".NET Core Launch (console)",
  "stopAtEntry": false,
@@ -24,4 +24,3 @@
 ====
 
 . Test the autocompletion feature within the braces of the `configuration` section of the `launch.json` file. If you can find `netcoredbg`, the Che-Theia plug-in is correctly initialized. If not, see xref:viewing-che-workspaces-logs.adoc[].
-
