--- a/modules/end-user-guide/partials/proc_viewing-che-theia-ide-logs-on-the-cli.adoc
+++ b/modules/end-user-guide/partials/proc_viewing-che-theia-ide-logs-on-the-cli.adoc
@@ -32,7 +32,7 @@ workspace0zqb2ew3py4srthh.go-cli-549cdcf69-9n4w2  4/4    Running  0         1h
 +
 [subs="+quotes",options="nowrap",role=white-space-pre]
 ----
-$ oc get pods _<name-of-pod>_ --output jsonpath='\{.spec.containers[*].name}'
+$ oc get pods _<name_of_pod>_ --output jsonpath='\{.spec.containers[*].name}'
 ----
 +
 .Example:
@@ -47,7 +47,7 @@ jsonpath='\{.spec.containers[*].name}'
 +
 [subs="+quotes"]
 ----
-$ oc logs --follow _<name-of-pod>_ --container _<name-of-container>_
+$ oc logs --follow _<name_of_pod>_ --container _<name_of_container>_
 ----
 +
 .Example:
