--- a/modules/administration-guide/examples/snip_che-build-a-custom-plug-in-registry.adoc
+++ b/modules/administration-guide/examples/snip_che-build-a-custom-plug-in-registry.adoc
@@ -1,6 +1,6 @@
 [subs="+attributes,+quotes"]
 ----
-$ ./build.sh --organization _<my-org>_ \
-           --registry _<my-registry>_ \
-           --tag _<my-tag>_
+$ ./build.sh --organization _<my_org>_ \
+           --registry _<my_registry>_ \
+           --tag _<my_tag>_
 ----
