--- a/modules/administration-guide/pages/configuring-che-hostname.adoc
+++ b/modules/administration-guide/pages/configuring-che-hostname.adoc
@@ -32,9 +32,9 @@ $ {orch-cli} create {orch-namespace} {prod-namespace}
 +
 [subs="+quotes,attributes"]
 ----
-$ {orch-cli} create secret TLS __<tls-secret-name>__ \ <1>
---key __<key-file>__ \ <2>
---cert __<cert-file>__ \ <3>
+$ {orch-cli} create secret TLS __<tls_secret_name>__ \ <1>
+--key __<key_file>__ \ <2>
+--cert __<cert_file>__ \ <3>
 -n {prod-namespace}
 ----
 <1> The TLS secret name
@@ -45,7 +45,7 @@ $ {orch-cli} create secret TLS __<tls-secret-name>__ \ <1>
 +
 [subs="+quotes,attributes"]
 ----
-$ {orch-cli} label secret __<tls-secret-name>__ \ <1>
+$ {orch-cli} label secret __<tls_secret_name>__ \ <1>
 app.kubernetes.io/part-of=che.eclipse.org -n {prod-namespace}
 ----
 <1> The TLS secret name
