--- a/modules/end-user-guide/pages/first-time-contributors.adoc
+++ b/modules/end-user-guide/pages/first-time-contributors.adoc
@@ -14,11 +14,11 @@ image::contribute.svg[Factory badge]
 
 .Procedure
 
-. Substitute your {prod-short} URL (`pass:c,a,q[{prod-url}]`) and repository URL (`__<your-repository-url>__`), and add the link to your repository in the project `README.md` file.
+. Substitute your {prod-short} URL (`pass:c,a,q[{prod-url}]`) and repository URL (`__<your_repository_url>__`), and add the link to your repository in the project `README.md` file.
 +
 [subs="+attributes,+macros,+quotes"]
 ----
-[![Contribute](https://www.eclipse.org/che/contribute.svg)](pass:c,a,q[{prod-url}]/#https://__<your-repository-url>__)
+[![Contribute](https://www.eclipse.org/che/contribute.svg)](pass:c,a,q[{prod-url}]/#https://__<your_repository_url>__)
 ----
 
 . The `README.md` file in your Git provider web interface displays the image:contribute.svg[Factory badge] factory badge. Click the badge to open a workspace with your project in your {prod-short} instance.
