--- a/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
+++ b/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
@@ -15,9 +15,9 @@ This section describes how to install {prod-short} using the OpenShift web conso
 
 .Procedure
 
-. Install the {prod} Operator. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/operators/admin/olm-adding-operators-to-cluster.html#olm-installing-from-operatorhub-using-web-console_olm-adding-operators-to-a-cluster[Installing from OperatorHub using the web console].
+. Install the {prod} Operator.
 
-. Create a {prod-short} instance from the {prod} Operator. See https://docs.openshift.com/container-platform/4.10/operators/user/olm-creating-apps-from-installed-operators.html[Creating applications from installed Operators].
+include::example$snip_{project-context}-web-console-installation-steps.adoc[]
 
 .Verification
 
@@ -31,3 +31,9 @@ This section describes how to install {prod-short} using the OpenShift web conso
 * The *{prod} URL* field contains the URL of the {prod} instance. The URL appears when the deployment finishes successfully.
 
 . Navigate to the *Resources* tab. View the list of resources assigned to the {prod-short} deployment and their status.
+
+.Additional resources
+
+* link:https://docs.openshift.com/container-platform/{ocp4-ver}/operators/admin/olm-adding-operators-to-cluster.html#olm-installing-from-operatorhub-using-web-console_olm-adding-operators-to-a-cluster[Installing from OperatorHub using the web console]
+
+* https://docs.openshift.com/container-platform/4.10/operators/user/olm-creating-apps-from-installed-operators.html[Creating applications from installed Operators]
