fix: add docs for starting ephemeral/persistent workspaces

--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -13,6 +13,7 @@
 *** xref:url-parameter-for-starting-duplicate-workspaces.adoc[]
 *** xref:url-parameter-for-the-devfile-file-name.adoc[]
 *** xref:url-parameter-for-the-devfile-file-path.adoc[]
+*** xref:url-parameter-for-starting-ephemeral-workspaces.adoc[]
 ** xref:basic-actions-you-can-perform-on-a-workspace.adoc[]
 ** xref:authenticating-to-a-git-server-from-a-workspace.adoc[]
 * xref:customizing-workspace-components.adoc[]
