--- a/modules/end-user-guide/pages/optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc
+++ b/modules/end-user-guide/pages/optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc
@@ -14,3 +14,4 @@ When you start a new workspace, {prod-short} configures the workspace according 
 * xref:url-parameter-for-starting-duplicate-workspaces.adoc[]
 * xref:url-parameter-for-the-devfile-file-name.adoc[]
 * xref:url-parameter-for-the-devfile-file-path.adoc[]
+* xref:url-parameter-for-starting-ephemeral-workspaces.adoc[]
