--- a/modules/administration-guide/partials/con_a-workspace-example.adoc
+++ b/modules/administration-guide/partials/con_a-workspace-example.adoc
@@ -15,7 +15,7 @@ metadata:
 components:
   - name: tools
     container:
-      image: quay.io/devfile/universal-developer-image:ubi8-0e189d9
+      image: quay.io/devfile/universal-developer-image:ubi8-latest
       memoryLimit: 4Gi
 
 commands:
